--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "warranty-verse",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.18.1",
+    "npm": "6.14.15"
+  },
   "dependencies": {
-    "@alch/alchemy-web3": "^1.4.6",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.0.1",
-    "ethers": "^5.6.9",
-    "hardhat": "^2.10.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@alch/alchemy-web3": "^1.1.7",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^10.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,11 +25,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.1.0"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   },
   "browserslist": {
     "production": [
@@ -39,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.1.0"
   }
 }
