--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^10.0.0",
     "ethers": "^5.6.9",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
