--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "aos": "^2.3.4",
     "dotenv": "^10.0.0",
     "ethers": "^5.6.9",
+    "firebase": "^9.9.1",
+    "ipfs-http-client": "^42.0.0",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
     "react-datepicker": "^4.8.0",
