--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "dotenv": "^10.0.0",
     "ethers": "^5.6.9",
+    "express": "^4.18.1",
     "firebase": "^9.9.1",
     "ipfs-http-client": "^42.0.0",
     "react": "^17.0.2",
